[tool.poetry]
name = "python_template"
version = "0.2.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"

[tool.poetry.dev-dependencies]
# Xonsh
Pygments = "^2.12.0"
prompt-toolkit = "^3.0.29"
setproctitle = "^1.2.3"
xonsh = "^0.12.5"
# Autoformatter
yapf = "^0.32"
# Linting
pylint = "^2.12"
# Type checking
mypy = "^0.950"
# Test library
pytest = "^7.1"
pytest-asyncio = "^0.18"
pytest-cov = "^3.0"
pytest-benchmark = "^3.4"
# Property based testing
hypothesis = "^6.34"
# Cyclomatic complexity checker
radon = "^5.0"
# Function profiler, checks how often functions get called
snakeviz = "^2.1"
# Line profiler
scalene = "^1.3.16"
# Line profiler, unable to install on windows?
# line_profiler = "^3.0"
# Required by line_profiler
# ipython = "^7.16"
# Enable pre commit hooks
pre-commit = "^2.15"

[tool.poetry.scripts]
# Can be launched via 'poetry run python_examples_main'
python_examples_main = "python_examples.main:main_sync"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.pycln]
all = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.design]
# Maximum number of locals for function / method body
max-locals = 25
[tool.pylint.messages_control]
max-line-length = 120
# C0301 Line too long
# C0114 module Docstring
# C0115 missing class docstring
# C0116 missing function docstring
# R0913 function with too many arguments
# C0413 import order
# C0411 import order of external libs
# W0511 TODO
# W0105 string statement with no effect
# R0801 duplicate code
# W0621 redefining name from outer score
# C0103 variable name does not conform snake case naming style
# R0903: Too few public methods of a class
# E1101: Class 'SqlMetaclass' has no '__annotations__' member (no-member)
# C0302: Too many lines in module (2027/1000) (too-many-lines)
# R0902: Too many instance attributes (62/7) (too-many-instance-attributes)
# R0915: Too many statements (61/50) (too-many-statements)
# W0640: Cell variable mining_place defined in loop (cell-var-from-loop)
# W1514: Using open without explicitly specifying an encoding (unspecified-encoding)
disable = ["C0301", "C0114", "C0115", "C0116", "R0913", "C0413", "C0411", "W0511", "W0105", "R0801", "W0621", "C0103", "R0903", "E1101", "C0302", "R0902", "R0915", "W0640", "W1514"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
split_arguments_when_comma_terminated = true
dedent_closing_brackets = true
allow_split_before_dict_value = false

[tool.coverage.report]
exclude_lines = ["def __repr__", "def main", "if __name__ == .__main__.:", "if 0:", "if False:"]
