[tool.poetry]
name = "python_template"
version = "0.2.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"

[tool.poetry.group.dev.dependencies]
# Enable pre commit hooks
pre-commit = "^2.15"

[tool.poetry.scripts]
# Can be launched via 'poetry run python_examples_main'
python_examples_main = "python_examples.main:main_sync"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.coverage.report]
exclude_lines = ["def __repr__", "def main", "if __name__ == .__main__.:", "if 0:", "if False:"]
