[tool.poetry]
name = "burny_common"
version = "0.0.1"
description = ""
authors = ["BurnySc2 <gamingburny@gmail.com>"]
packages = [
    { include = "burny_common/*.py" },
]


[tool.poetry.dependencies]
python = ">=3.8, <3.11"
loguru = "^0.6.0"
click = "^8.1.3"
paramiko = "^2.11.0"

[tool.poetry.dev-dependencies]
# Autoformat
yapf = "^0.32.0"
toml = "^0.10.2"
# Linter
pylint = "^2.14.3"
# Type checker
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
