[tool.poetry]
name = "burny_common"
version = "0.0.9"
description = ""
authors = ["BurnySc2 <gamingburny@gmail.com>"]
packages = [
    { include = "burny_common/*.py" },
]


[tool.poetry.dependencies]
python = ">=3.8, <3.12"
loguru = "^0.6.0"
click = "^8.1.3"
paramiko = "^2.11.0"
psutil = "^5.9.1"
requests = "^2.28.0"
types-requests = "^2.27.31"
portpicker = "^1.5.2"


[tool.poetry.group.dev.dependencies]
# Autoformat
yapf = "^0.32.0"
toml = "^0.10.2"
# Remove unused imports
pycln = "^1.3.3"
# Reorder imports
isort = "^5.10.1"
# Linter
ruff = "^0.0.247"
# Type checker
pyre-check = "^0.9.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pycln]
all = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
split_arguments_when_comma_terminated = true
dedent_closing_brackets = true
allow_split_before_dict_value = false

[tool.ruff]
line-length = 120
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
