[tool.poetry]
name = "discord_bot"
version = "0.1.0"
description = ""
authors = ["burny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
# Datetime library
arrow = "^1.2.2"
# Discord bot
hikari = "^2.0.0.dev110"
# Simple logger
loguru = "^0.6.0"
# Table plotting
ptable = "^0.9.2"
# Remote SQL DB
supabase = "^1.0.0"
postgrest-py = "^0.10.2"
# Argparse with dataclass
simple-parsing = "^0.0.20"
# Table as ascii art
table2ascii = "^1.1.0"

[tool.poetry.dev-dependencies]
# Test library
hypothesis = "^6.8.5"
pytest = "^7.0.0"
pytest-asyncio = "^0.15.1"
# Autoformat
yapf = "^0.32.0"
toml = "^0.10.2"
# Remove unused imports
pycln = "^2.0.0"
# Reorder imports
isort = "^5.10.1"
# Linter
pylint = "^2.14.3"
# Type checker
mypy = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
