[tool.poetry]
name = "burny_test_template"
version = "0.3.0"
description = ""
authors = ["BurnySc2 <gamingburny@gmail.com>"]
packages = [
    { include = "burny_test_template/*.py" },
#    { include = "burny_test_template/*.txt" },
]


[tool.poetry.dependencies]
python = ">=3.7, <3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
