[tool.poetry]
name = "burny_test_template"
version = "0.3.1"
description = ""
authors = ["BurnySc2 <gamingburny@gmail.com>"]
packages = [
    { include = "burny_test_template/*.py" },
#    { include = "burny_test_template/*.txt" },
]


[tool.poetry.dependencies]
python = ">=3.8, <3.11"
loguru = "^0.6.0"
lorem-text = "^2.1"

[tool.poetry.dev-dependencies]
# Autoformat
yapf = "^0.32.0"
toml = "^0.10.2"
# Linter
pylint = "^2.14.3"
# Type checker
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
