[tool.poetry]
name = "python_examples"
version = "0.1.0"
description = ""
authors = ["burny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
# Numeric python
numpy = "^1.21"
# Write and read classes to/from json
dataclasses-json = "^0.5"
# Write and read classes to/from json with validator
pydantic = {extras = ["email"], version = "^1.10.2"}
# Network access
aiohttp = "^3.7"
requests = "^2.26"
# Required by aiohttp on windows?
idna-ssl = "^1.1"
# Simple logger
loguru = "^0.6"
# Required by loguru on windows?
aiocontextvars = "^0.2"
atomicwrites = "^1.3"
contextvars = "^2.4"
win32-setctime = "^1.0"
# Image library
pillow = "^9.1"
# Better / easier datetime library
pendulum = "^2.1"
# Easier nested dictionary manipulation
dpath = "^2.0"
# File watcher
watchgod = "^0.8"
# Database with ORM
SQLAlchemy = "^1.4"
# Simple database that operates on dictionaries
tinydb = "^4.5"
# New popular database mongodb
pymongo = "^3.12"
# Generate text
lorem-text = "^2.1"
# https://github.com/tiangolo/sqlmodel
sqlmodel = "^0.0.8"
# Geometry manipulation
Shapely = "^1.8"
# Info about the system
psutil = "^5.8"
# Execute command on server via SSH, or push files via SFTP
paramiko = "^2.8"
# Simpler argparse
click = "^8.1"
# SQL ORM
peewee = "^3.14"
# Sync mongoDB ODM
mongoengine = "^0.24"
# Async mongoDB ODM
beanie = "^1.11"
# Create sqlalchemy migrations
alembic = "^1.7"
# Load environment variables from .env file
python-dotenv = "^0.20"
# Data science and plotting
pandas = "^1.4.2"
# Plotting
seaborn = "^0.11.2"
# Plotting
matplotlib = "^3.5.2"
# Plotting
bokeh = "^2.4.3"
# Animation
#manim = "^0.15.2"
aiofiles = "^0.8.0"
burny-common = "^0.0.4"


[tool.poetry.dev-dependencies]
# Test library
pytest = "^7.1"
pytest-asyncio = "^0.18"
pytest-cov = "^3.0"
pytest-benchmark = "^3.4"
# Statistical testing
hypothesis = "^6.34"
# Cyclomatic complexity checker
radon = "^5.0"
# Function profiler, checks how often functions get called
snakeviz = "^2.1"
# Line profiler
scalene = "^1.3.16"
# Line profiler, unable to install on windows?
# line_profiler = "^3.0"
# Required by line_profiler
# ipython = "^7.16"
# Enable pre commit hooks
pre-commit = "^2.15"
# Autoformat
yapf = "^0.32.0"
toml = "^0.10.2"
# Remove unused imports
pycln = "^1.3.3"
# Reorder imports
isort = "^5.10.1"
# Linter
pylint = "^2.14.3"
# Type checker
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "*.py"
