[tool.poetry]
name = "svelte_frontend"
version = "0.1.0"
description = ""
authors = ["burny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"

[tool.poetry.dev-dependencies]
# Autoformatter
yapf = "^0.32"
toml = "^0.10.2"
# Remove unused imports
pycln = "^1.3.3"
# Reorder imports
isort = "^5.10.1"
# Linting
pylint = "^2.12"
# Type checking
mypy = "^0.950"
# Test library
pytest = "^7.1"
pytest-asyncio = "^0.18"
pytest-cov = "^3.0"
pytest-benchmark = "^3.4"
# Frontend tests
playwright = "^1.22.0"
pytest-playwright = "^0.3.0"
burny-common = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
