[tool.poetry]
name = "transcriber-backend"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11" # Pony doesnt support 3.11 yet
# Argparse with dataclass
simple-parsing = "^0.1"
# Better dataclasses
pydantic = "^1.10.5"
# Logging
loguru = "^0.7.0"
# Read config files
toml = "^0.10.2"
# Better datetime
arrow = "^1.2.3"
# Database interaction
pony = "^0.7.16"
# Requires binary for Dockerfile
# psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
# Display sizes in human readable format
humanize = "^4.6.0"
# Transcribing
faster-whisper = "^1.0.1"
# Progress bar
tqdm = "^4.65.0"
pyrogram = "^2.0.93" # Since version 2.0.94 it doesn't seem to allow parallel downloads
# Required by pyrogram
tgcrypto = "^1.2.5"
# Translator
deep-translator = "^1.11.1"
# Owncloud client
pyocclient = "^0.6"
dataset = "^1.6.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
# Test library
hypothesis = "^6.8.5"
pytest = "^7.0.0"
pytest-asyncio = "^0.15.1"
# Linter
ruff = "^0.1.14"
# Type checker
pyre-check = "^0.9.18"
# Cpu and memory profiler
scalene = "^1.5.21.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
split_arguments_when_comma_terminated = true
dedent_closing_brackets = true
allow_split_before_dict_value = false

[tool.ruff]
target-version = 'py38'
line-length = 120
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "C4",  # flake8-comprehensions
    "E",   # Error
    "F",   # pyflakes
    "BLE", # flake8-blind-except
    "I",   # isort
    "N",   # pep8-naming
    "PGH", # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "W",   # Warning
    "Q",   # flake8-quotes
    "YTT", # flake8-2020
    "UP",  # pyupgrade
    #    "A",  # flake8-builtins
]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
# Remove once support for py3.8 and 3.9 is dropped
keep-runtime-typing = true

[tool.ruff.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["pydantic.validator", "classmethod"]
