[tool.poetry]
name = "leetcode-solutions"
version = "0.1.0"
description = ""
authors = ["BurnySc2 <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7 <3.11"
numpy = "^1.21.1"
atomicwrites = "^1.4.0"
pytest = "^6.2.4"
pytest-benchmark = "^3.4.1"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
split_arguments_when_comma_terminated = true
dedent_closing_brackets = true